--- a/dyppis_backend/resources/css/app.css
+++ b/dyppis_backend/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* resources/css/app.css */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
